--- a/app/src/main/res/xml/settings_general.xml
+++ b/app/src/main/res/xml/settings_general.xml
@@ -20,7 +20,7 @@
 
     <MultiSelectListPreference
         android:dialogTitle="@string/pref_guide_language_title"
-        android:key="mode_repeat"
+        android:key="guide_languages"
         android:title="@string/pref_guide_language_title"
         android:entries="@array/pref_ui_language_list_titles"
         android:entryValues="@array/pref_ui_language_list_values"
