--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -6,8 +6,7 @@
     android:paddingTop="@dimen/appbar_padding_top"
     android:theme="@style/AppBarOverlay">
 
-    <android.support.v7.widget.Toolbar
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -24,8 +23,18 @@
             <SearchView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
-
-
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
+
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabsMy"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+
+
+
 </android.support.design.widget.AppBarLayout>
